--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 PyJWT==2.10.1
+python-dotenv==1.1.0
 pytz==2025.2
 six==1.17.0
 SQLAlchemy==2.0.40
