--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 SECRET_KEY='secret-key'
-DATABASEURI='sqlite:///db.sqlite3'
+DATABASE_URI='sqlite:///db.sqlite3'
 SQLALCHEMY_TRACK_MODIFICATIONS=False
 JWT_SECRET_KEY='secret-key'
 JWT_ACCESS_TOKEN_EXPIRES=1
