--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,4 @@ services:
       - FLASK_ENV=development
       - FLASK_RUN_HOST=0.0.0.0
       - FLASK_APP=app
-      
-    # ป้องกัน Flask รันที่ localhost:5000 โดยค่าเริ่มต้น ภายใน container และ 0.0.0.0 เพื่อรับ request จากภายนอก container
-    command: flask run --host=0.0.0.0 --port=5001 
+    command: flask run --host=0.0.0.0 --port=5001  # ป้องกัน Flask รันที่ localhost:5000 โดยค่าเริ่มต้น ภายใน container และ 0.0.0.0 เพื่อรับ request จากภายนอก container
