--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3.8'
 services:
   flask-api:
     build: .
+    env_file:
+      - .env.dev
     ports:
       - "5001:5001"
     volumes:
@@ -10,5 +12,7 @@ services:
     environment:
       - FLASK_ENV=development
       - FLASK_RUN_HOST=0.0.0.0
+      - FLASK_RUN_PORT=5001
       - FLASK_APP=app
-    command: flask run --host=0.0.0.0 --port=5001  # ป้องกัน Flask รันที่ localhost:5000 โดยค่าเริ่มต้น ภายใน container และ 0.0.0.0 เพื่อรับ request จากภายนอก container
+      
+    command: flask run # ป้องกัน Flask รันที่ localhost:5000 โดยค่าเริ่มต้น ภายใน container และ 0.0.0.0 เพื่อรับ request จากภายนอก container
