--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 aniso8601==10.0.1
 blinker==1.9.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
 click==8.1.8
 colorama==0.4.6
 Flask==3.1.0
@@ -7,13 +9,16 @@ flask-cors==5.0.1
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.1
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 PyJWT==2.10.1
 python-dotenv==1.1.0
 pytz==2025.2
+requests==2.32.3
 six==1.17.0
 SQLAlchemy==2.0.40
 typing_extensions==4.13.2
+urllib3==2.4.0
 Werkzeug==3.1.3
